small modification in forms

--- a/src/app/components/add-customer/add-customer.component.html
+++ b/src/app/components/add-customer/add-customer.component.html
@@ -41,7 +41,7 @@
 
        <!-- list of addresses -->
       <div formArrayName="addresses" class="row">
-        <div *ngFor="let address of myForm.controls.addresses.controls; let i=index" class="col-md-12 mb-3">
+        <div *ngFor="let address of myForm.controls.addresses['controls']; let i=index" class="col-md-12 mb-3">
           <div class="card">
             <!-- address header, show remove button when more than one address available -->
             <div class="card-header">
